# esp-protocols

./: .clang-format  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  index.html  pytest.ini
common_components/linux_compat/freertos/: CMakeLists.txt  Kconfig  freertos_linux.c  linux_coop_linker_wrap.c
components/6lowpan_ble/: CMakeLists.txt
components/6lowpan_ble/src/: lowpan6_ble_netif.c
components/asio/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Kconfig  README.md  idf_component.yml
components/asio/docs/: Doxyfile  conf_common.py
components/avahi/: CMakeLists.txt  README.md  idf_component.yml
components/avahi/avahi-port/: config.h  iface-esp32.c  poll.h  socket.c
components/console_cmd_ping/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  README.md  console_getaddrinfo.c  console_getsetdnsserver.c  console_ping.c  console_ping.h  idf_component.yml
components/console_cmd_wifi/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  README.md  console_wifi.c  idf_component.yml
components/console_cmd_wifi/include/: console_wifi.h
components/eppp_link/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  detailed_description.md  eppp_common.h  eppp_eth.c  eppp_link.c  eppp_link_netif.cpp  eppp_netif_tun.c  eppp_sdio.c  eppp_sdio.h  eppp_sdio_host.c  eppp_sdio_slave.c  eppp_slip.c  eppp_spi.c  eppp_transport.h  eppp_uart.c  eppp_usb_device.c  eppp_usb_host.c  idf_component.yml  plan.md
components/eppp_link/include/: eppp_link.h  eppp_transport_eth.h  eppp_transport_sdio.h  eppp_transport_spi.h  eppp_transport_uart.h
components/esp_dns/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  esp_dns.c  esp_dns_doh.c  esp_dns_doh.h  esp_dns_dot.c  esp_dns_dot.h  esp_dns_lwip.c  esp_dns_priv.h  esp_dns_tcp.c  esp_dns_tcp.h  esp_dns_udp.c  esp_dns_udp.h  esp_dns_utils.c  esp_dns_utils.h  idf_component.yml
components/esp_dns/include/: esp_dns.h
components/esp_modem/: .build-test-rules.yml  .cz.yaml  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists_v2.txt  Kconfig  README.md  idf_component.yml  pre_upload.sh  proposal.md  urc_docs_plan.md  urc_impl.md  urc_test_plan.md
components/esp_modem/docs/: Doxyfile  README.md  advanced_api.rst  api_docs.rst  conf.py  esp_modem_dce.hpp  generate_docs  internal_design.md  (+1 more)
components/esp_wifi_remote/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  Kconfig.rpc.in  Kconfig.slave_select.in  Kconfig.soc_wifi_caps.in  README.md  esp_wifi_remote.c  esp_wifi_remote_net.c  esp_wifi_remote_private.h  esp_wifi_remote_weak.c  esp_wifi_with_remote.c  idf_component.yml  wifi_remote_init.c  wifi_remote_net.c  wifi_remote_rpc.c
components/freertos_tcp/: .build-test-rules.yml  .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE.txt  README.md  idf_component.yml
components/iperf/: .cz.yaml  CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml  iperf.c
components/libsrtp/: .build-test-rules.yml  .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE  NOTICE  README.md  idf_component.yml  sbom.yml  sbom_libsrtp.yml
components/libwebsockets/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE.txt  README.md  idf_component.yml
components/mosquitto/: .build-test-rules.yml  .cz.yaml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Kconfig  README.md  api.md  generate_api_docs.sh  idf_component.yml
components/net_connect/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  README.md  addr_from_stdin.c  connect.c  console_cmd.c  eth_connect.c  idf_component.yml  ppp_connect.c  protocol_examples_utils.c  sdkconfig.rename  stdin_out.c  thread_connect.c  wifi_connect.c  wifi_connect_config.c
components/sock_utils/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
components/usrsctp/: .build-test-rules.yml  .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  NOTICE  README.md  idf_component.yml  sbom.yml  sbom_usrsctp.yml  usrsctp_register.c
esp_modem/: .buildinfo  CMakeLists.txt  Kconfig  README.html  README.md  advanced_api.html  api_docs.html  cxx_api_docs.html  cxx_api_links.html  genindex.html  idf_component.yml  index.html  internal_design.html  internal_docs.html  objects.inv  search.html  searchindex.js
esp_modem/.doctrees/: README.doctree  advanced_api.doctree  api_docs.doctree  cxx_api_docs.doctree  cxx_api_links.doctree  environment.pickle  index.doctree  internal_design.doctree  internal_docs.doctree
esp_modem/_sources/: cxx_api_docs.rst.txt  cxx_api_links.rst.txt  index.rst.txt  internal_design.md.txt
esp_modem/docs/: Doxyfile  README.md  advanced_api.rst  api_docs.rst  c_api.h  conf.py  cpp_api.h  cxx_api_docs.rst  cxx_api_links.rst  esp_modem_api_commands.h  esp_modem_dce.hpp  generate_docs  index.rst  internal_desing.md  internal_docs.rst
esp_modem/include/: esp_modem.h  esp_modem_api.h  esp_modem_c_api_types.h  esp_modem_config.h  esp_modem_dce_config.h  esp_modem_dte.h  esp_modem_dte_config.h  esp_modem_recov_helper.h
esp_modem/include_compat/: esp_modem_compat.h
esp_modem/private_include/: esp_modem_device_specific_dce.h  exception_stub.hpp  uart_resource.hpp  uart_terminal.hpp  vfs_termial.hpp
esp_modem/src/: bg96.c  esp_modem.c  esp_modem_api.cpp  esp_modem_cmux.cpp  esp_modem_command_library.cpp  esp_modem_commands.cpp  esp_modem_dce.c  esp_modem_dce.cpp  esp_modem_dce_command_lib.c  esp_modem_dce_common_commands.c  esp_modem_device.cpp  esp_modem_device_factory.cpp  esp_modem_dte.c  esp_modem_dte.cpp  esp_modem_factory.cpp  esp_modem_modules.cpp  esp_modem_netif.c  esp_modem_netif.cpp  esp_modem_netif_linux.cpp  esp_modem_primitives_freertos.cpp  esp_modem_primitives_linux.cpp  esp_modem_term_fs.cpp  esp_modem_term_uart.cpp  esp_modem_uart.cpp  esp_modem_uart_linux.cpp  esp_sim7600.c  ppp_netif.cpp  sim800.c
esp_wifi_remote/: CMakeLists.txt  Kconfig  esp_wifi_remote.c  idf_component.yml  wifi_remote_init.c  wifi_remote_net.c  wifi_remote_rpc.c
esp_wifi_remote/include/: esp_wifi_native.h  esp_wifi_remote.h
(+1440 files in other folders)
